# Synergy

CA-DSGN1/: README.md
CA-DSGN1PLUS/: CHANGEBODY_figma_handoff.md  CHANGEBODY_sources.md  ux_concept.pptx
CA-DSGN2/: README.md  README.txt
CA-JSTS1/: README.md
CA-JSTS1/src/: App.tsx
CA-JSTS1/src/styles/: global.css
CA-JSTS1MAX/: README.md
CA-JSTS1PLUS/src/styles/: global.css
CS1/: README.md
CS1MAX/: README.md  display.py  logic.py  main.py  pyproject.toml
CS1MAX/src/birthdate_app/: cli.py  core.py  gui.py  strings.py  validation.py
CS1MAX/src/birthdate_app.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
CS1MAX/web/birthdate_web_app/templates/birthdate_web_app/: index.html
CS1PLUS/web/birthdate_web_app/templates/birthdate_web_app/: index.html
CS2/: README.md
CS2MAX/src/business/: counter.js
CS2MAX/tests/e2e/: counter.spec.js
CS2MAX/tests/unit/: counter.test.js
CS2PLUS/: README.md  index.html  package.json
CS2PLUS/tests/unit/: counter.test.js
CS3/: README.md
CS3/greeting_project/: settings.py
CS3/greeting_project/greeting/static/greeting/: styles.css
CS3MAX/greeting_project/greeting/: api.py  apps.py  forms.py  serializers.py  tests.py  urls.py  views.py
CS3MAX/greeting_project/greeting/static/greeting/: styles.css
CS3MAX/greeting_project/greeting/templates/greeting/: base.html  greetings_delete.html  (+4 more)
CS3MAX/greeting_project/greeting/templatetags/: __init__.py  ui.py
CS4/: index.html
CS4MAX/: README.md  package.json
CS5/: CS1.md  CS2.md  CS3.md  CS4.md  README.md
CS5MAX/: CS1.md
(+3 files in other folders)
